# dagster-datacontract

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  validate-release-version.py
.github/workflows/: release-dagster-datacontract.yml  template-release.yml
dagster_datacontract/: __init__.py
dagster_datacontract/components/: __init__.py  load_asset_checks.py  load_assets.py
dagster_datacontract/metadata/: __init__.py  server_information.py  table_colums.py
dagster_datacontract/owners/: __init__.py
dagster_datacontract/specifications/: __init__.py
dagster_datacontract/tags/: __init__.py  load_tags.py
dagster_datacontract/utils/: __init__.py
example/: README.md  assets.py  datacontract.yml
examples/components/: .env  .gitignore  README.md  pyproject.toml
examples/components/src/components/: definitions.py
examples/components/src/components/defs/combine_trips/: asset.py
examples/components/src/components/defs/ingest_nyc_taxi/: component.yaml  datacontract-green_trips.yml  datacontract-yellow_trips.yml  datacontract.yml  datacontract2.yml
examples/components/src/components/lib/: __init__.py  ingest_parquet_from_a_p_i.py
examples/simple/: README.md  assets.py  datacontract.yml
