[project]
name = "components"
requires-python = ">=3.11.10"
version = "0.1.0"
dependencies = [
    "dagster-datacontract",
    "dagster",
    "polars",
]

[project.entry-points]
"dagster_dg.plugin" = { components = "components.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[tool.uv.sources]
dagster-datacontract = { path = "../../", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "components"

[tool.dg.project.python_environment]
uv_managed = true

